and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October, 29th, 2013,  G.Cosmo           -  geomsolids-V09-06-01
- Include tags on top of geant4-09-06-ref-10: geom-specific-V09-06-22.
- Added new 'usolids' module, including classes imported from the AIDA
  Unified Solids Library (see https://aidasoft.web.cern.ch/USolids).

December, 14th, 2012,   G.Cosmo         -  geomsolids-V09-06-00
- Includes tags: geom-bool-V09-06-01, geom-csg-V09-06-01,
                 geom-specific-V09-06-01, geom-solids-tests-V09-06-00.
- Archived BREPS module.
- Restored SVN id headers.

June, 12th, 2012,   G.Cosmo             -  geomsolids-V09-05-00
- Includes tags: geom-bool-V09-05-02, geom-csg-V09-05-04, breps-V09-05-01,
                 geom-specific-V09-05-06.
- Explicitly use inclusion of headers for system of units and physical
  constants, in plan to remove implicit inclusion from globals.hh.

October, 20th, 2006,   G.Cosmo             -  geomsolids-V08-01-00
- Includes tags: geom-bool-V08-01-00, breps-V08-01-00, geom-csg-V08-01-00,
                 geom-specific-V08-01-00, geom-solids-tests-V08-01-00.
- Implemented specific computation of surface area for CSG solids and
  included caching mechanism for the computed value.
- Requires tag "geommng-V08-01-04".

November, 9th, 2005,   G.Cosmo             -  geomsolids-V07-01-00
- Includes tags: geom-bool-V07-01-01, breps-V07-01-01, geom-csg-V07-01-04,
                 geom-specific-V07-01-07.
- Implemented changes for support of CLHEP-2.0.X.
- Added fake default constructor for all concrete solids, base classes
  and relevant utility classes for handling of direct object persistency.
- Implemented migration to <sstream> from deprecated <strstream> for