@@ -212,7 +212,7 @@ void AXPETPhysicsList::ConstructOp()
   theScintillationProcess->SetTrackSecondariesFirst(true);
 
 //  G4OpticalSurfaceModel themodel = glisur;
-  G4OpticalSurfaceModel themodel = unified;
+  // G4OpticalSurfaceModel themodel = unified;
   // theBoundaryProcess->SetModel(themodel); // --> Not available since 9.6 beta 
 //  theBoundaryProcess->SetVerboseLevel(1);
 
