@@ -6,9 +6,9 @@
 /mydet/SelectDetector Torus
 #/mydet/SelectDetector Box
 #/mydet/SelectDetector Sphere
-#/mydet/SelectDetector Tube
+#/mydet/SelectDetector Tubs
 #/mydet/SelectDetector Orb
-#/mydet/SelectDetector Cone
+#/mydet/SelectDetector Cons
 #/mydet/SelectDetector TwistedTubs 
 #/mydet/SelectDetector  TwistedBox
 #/mydet/SelectDetector TwistedTrd
