@@ -42,7 +42,7 @@
 #include "Randomize.hh" 
 
 //a pre-built physics list
-#include "QGSP_BERT_EMV.hh"
+#include "QGSP_BERT.hh"
 
 //My includes
 #include "DetectorConstruction.hh"
@@ -70,7 +70,7 @@ int main(int argc,char** argv)
 
 
   	//Set mandatory initialization and user action classes
- 	runManager->SetUserInitialization(new QGSP_BERT_EMV);
+ 	runManager->SetUserInitialization(new QGSP_BERT);
        
   	runManager->SetUserInitialization(new DetectorConstruction);
   	runManager->SetUserAction(new PrimaryGeneratorAction);
